# chisel

./: .gitignore  CLAUDE.md  PYTHON_PROJECT_SPEC.md  README.md  STYLESHEET_BEST_PRACTICES.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_openrouter.py  todo.md
.trae/rules/: project_rules.md
resources/icons/: chisel-icon.ai
src/chisel/: __init__.py  __main__.py  about_window.py  ai_client.py  app.py  clipboard.py  hotkey.py  processor.py  settings.py  settings_dialog.py  theme_utils.py  tray.py  utils.py
src/chisel/styles/: __init__.py  loader.py  main.qss
